things before I destroy everything.

--- a/test/testConfig.cfg
+++ b/test/testConfig.cfg
@@ -3,18 +3,13 @@
 ##########################################################################################################
 
 General {
-	test=5365436
-	asdf=-324523
+	test=15
+	asdf=9
 
 	# This is a random HashMap
 	lol=[
-		test=3
-		blargh=1534254
-		lol=154363546
-		asdf=-15
-		gbf=536554
-	]
-	asdft=[
-		test=lol
+		test=134084525642
+		lol=5
+		asdf=-325346554235423
 	]
 }
