changed the way map systems work, old functionality restored, not yet ready for full implementation.

--- a/test/testConfig.cfg
+++ b/test/testConfig.cfg
@@ -3,13 +3,9 @@
 ##########################################################################################################
 
 General {
-	test=15
-	asdf=9
-
-	# This is a random HashMap
-	lol=[
-		test=134084525642
-		lol=5
-		asdf=-325346554235423
+	test=[
+		test=153342
+		failure=404
+		asdf=534
 	]
 }
