made listception writing work, still bugs to work on for reading.

--- a/test/testConfig.cfg
+++ b/test/testConfig.cfg
@@ -3,8 +3,57 @@
 ##########################################################################################################
 
 General {
-	test=[
-		test=12
-		asdf=-15
+	test5=[
+		[
+			[
+				test
+				karle
+				mnadrkea
+			]
+			[
+				no
+				yes
+				maybe
+			]
+			[
+				true
+				false
+				neither
+			]
+		]
+		[
+			[
+				hfd
+				54t
+				htr
+			]
+			[
+				nbc
+				gasd
+				ewrg
+			]
+			[
+				gfsd
+				rwe
+				ytr
+			]
+		]
+		[
+			[
+				bgd
+				dsfag
+				sfg
+			]
+			[
+				adsf
+				xcas
+				bcv
+			]
+			[
+				try
+				bgfd
+				tht
+			]
+		]
 	]
 }
