reading works hypu.

--- a/test/testConfig.cfg
+++ b/test/testConfig.cfg
@@ -13,7 +13,7 @@ General {
 			[
 				no
 				yes
-				maybe
+				purple
 			]
 			[
 				true
@@ -29,7 +29,7 @@ General {
 			]
 			[
 				nbc
-				gasd
+				asdf
 				ewrg
 			]
 			[
@@ -52,7 +52,7 @@ General {
 			[
 				try
 				bgfd
-				tht
+				1991
 			]
 		]
 	]
