made Lists work in Maps

--- a/test/testConfig.cfg
+++ b/test/testConfig.cfg
@@ -3,56 +3,104 @@
 ##########################################################################################################
 
 General {
-	test5=[
+	test=[
 		[
 			[
 				test
-				karle
-				mnadrkea
+				gklvasd
+				nvirr
 			]
 			[
-				no
-				yes
-				purple
+				bgf
+				rewvfs
+				bsd
 			]
 			[
-				true
-				false
-				neither
-			]
-		]
-		[
-			[
-				hfd
-				54t
-				htr
-			]
-			[
-				nbc
+				rvweds
+				breswe
 				asdf
-				ewrg
+			]
+		]=[
+			[
+				fasdf
+				fdsav
+				bgf
 			]
 			[
-				gfsd
-				rwe
-				ytr
+				bgfdtr
+				asdf
+				brt
+			]
+			[
+				Keldon
+				Karel
+				Anthony
 			]
 		]
 		[
 			[
-				bgd
-				dsfag
-				sfg
+				bgf
+				rewvfs
+				bsd
 			]
 			[
-				adsf
-				xcas
-				bcv
+				rvweds
+				breswe
+				asdf
 			]
 			[
-				try
-				bgfd
-				1991
+				test
+				gklvasd
+				nvirr
+			]
+		]=[
+			[
+				bgfdtr
+				asdf
+				brt
+			]
+			[
+				Keldon
+				Karel
+				Anthony
+			]
+			[
+				fasdf
+				fdsav
+				bgf
+			]
+		]
+		[
+			[
+				rvweds
+				breswe
+				asdf
+			]
+			[
+				test
+				gklvasd
+				nvirr
+			]
+			[
+				bgf
+				rewvfs
+				bsd
+			]
+		]=[
+			[
+				Keldon
+				Karel
+				Anthony
+			]
+			[
+				fasdf
+				fdsav
+				bgf
+			]
+			[
+				bgfdtr
+				asdf
+				brt
 			]
 		]
 	]
