fixed support with normal datatypes.

--- a/test/testConfig.cfg
+++ b/test/testConfig.cfg
@@ -4,104 +4,20 @@
 
 General {
 	test=[
-		[
-			[
-				test
-				gklvasd
-				nvirr
-			]
-			[
-				bgf
-				rewvfs
-				bsd
-			]
-			[
-				rvweds
-				breswe
-				asdf
-			]
-		]=[
-			[
-				fasdf
-				fdsav
-				bgf
-			]
-			[
-				bgfdtr
-				asdf
-				brt
-			]
-			[
-				Keldon
-				Karel
-				Anthony
-			]
+		test=[
+			11
+			22
+			33
 		]
-		[
-			[
-				bgf
-				rewvfs
-				bsd
-			]
-			[
-				rvweds
-				breswe
-				asdf
-			]
-			[
-				test
-				gklvasd
-				nvirr
-			]
-		]=[
-			[
-				bgfdtr
-				asdf
-				brt
-			]
-			[
-				Keldon
-				Karel
-				Anthony
-			]
-			[
-				fasdf
-				fdsav
-				bgf
-			]
+		asdf=[
+			44
+			55
+			66
 		]
-		[
-			[
-				rvweds
-				breswe
-				asdf
-			]
-			[
-				test
-				gklvasd
-				nvirr
-			]
-			[
-				bgf
-				rewvfs
-				bsd
-			]
-		]=[
-			[
-				Keldon
-				Karel
-				Anthony
-			]
-			[
-				fasdf
-				fdsav
-				bgf
-			]
-			[
-				bgfdtr
-				asdf
-				brt
-			]
+		bfd=[
+			77
+			88
+			99
 		]
 	]
 }
