finished maps/lists in lists/maps. Keldon please try to break it.

--- a/test/testConfig.cfg
+++ b/test/testConfig.cfg
@@ -4,20 +4,20 @@
 
 General {
 	test=[
-		test=[
-			11
-			22
-			33
-		]
-		asdf=[
-			44
-			55
-			66
-		]
-		bfd=[
-			77
-			88
-			99
-		]
+		[
+			asdf1=1
+			asdf2=2
+			asdf3=3
+		]=test1
+		[
+			asdf4=4
+			asdf5=5
+			asdf6=6
+		]=test2
+		[
+			asdf7=7
+			asdf8=8
+			asdf9=9
+		]=test3
 	]
 }
