--- a/test/testConfig.cfg
+++ b/test/testConfig.cfg
@@ -3,21 +3,21 @@
 ##########################################################################################################
 
 General {
-	test=[
+	asdf=[
 		[
-			asdf1=1
-			asdf2=2
-			asdf3=3
-		]=test1
+			x=1
+			y=2
+			z=3
+		]
 		[
-			asdf4=4
-			asdf5=5
-			asdf6=6
-		]=test2
+			x=4
+			y=5
+			z=6
+		]
 		[
-			asdf7=7
-			asdf8=8
-			asdf9=9
-		]=test3
+			x=7
+			y=8
+			z=9
+		]
 	]
 }
