got rid of datawatcher.

--- a/test/testConfig.cfg
+++ b/test/testConfig.cfg
@@ -5,19 +5,43 @@
 General {
 	asdf=[
 		[
-			x=1
-			y=2
-			z=3
+			x=11
+			y=22
+			z=33
+			asfd=[
+				1
+				2
+			]
 		]
 		[
-			x=4
-			y=5
-			z=6
+			x=444
+			y=555
+			z=666
+			asfd=[
+				3
+				4
+			]
 		]
 		[
-			x=7
-			y=8
-			z=9
+			x=7777
+			y=8888
+			z=9999
+			asfd=[
+				5
+				6
+			]
+		]
+	]
+	purple=[
+		x=15543
+		y=16543
+		z=17645
+		asfd=[
+			-51
+			-52
+			-53
+			-54
+			-55
 		]
 	]
 }
