--- a/test/testConfig.cfg
+++ b/test/testConfig.cfg
@@ -5,43 +5,76 @@
 General {
 	asdf=[
 		[
-			x=11
-			y=22
-			z=33
+			x=1
+			y=2
+			z=3
 			asfd=[
 				1
 				2
-			]
-		]
-		[
-			x=444
-			y=555
-			z=666
-			asfd=[
 				3
 				4
+				5
+			]
+			blue=[
+				xx=321512
+				yy=5432
+				zz=12345
+				asdf=1234.54125432
 			]
 		]
 		[
-			x=7777
-			y=8888
-			z=9999
+			x=4
+			y=5
+			z=6
 			asfd=[
+				1
+				2
+				3
+				4
 				5
-				6
+			]
+			blue=[
+				xx=321512
+				yy=5432
+				zz=12345
+				asdf=1234.54125432
+			]
+		]
+		[
+			x=7
+			y=8
+			z=9
+			asfd=[
+				1
+				2
+				3
+				4
+				5
+			]
+			blue=[
+				xx=321512
+				yy=5432
+				zz=12345
+				asdf=1234.54125432
 			]
 		]
 	]
 	purple=[
-		x=15543
-		y=16543
-		z=17645
+		x=15
+		y=16
+		z=17
 		asfd=[
-			-51
-			-52
-			-53
-			-54
-			-55
+			1
+			2
+			3
+			4
+			5
+		]
+		blue=[
+			xx=321512
+			yy=5432
+			zz=12345
+			asdf=1234.54125432
 		]
 	]
 }
