--- a/test/testConfig.cfg
+++ b/test/testConfig.cfg
@@ -3,41 +3,41 @@
 ##########################################################################################################
 
 General {
+	test=[
+		5=fdsa
+		43=fads
+		54=asdvnilas
+	]
 	blues=[
 		5=[
 			xx=532
-			yy=654
+			yy=543
 			zz=52
 			asdf=235.0
 		]
 		543=[
 			xx=543
-			yy=453
+			yy=1234
 			zz=4123
 			asdf=532462.0
 		]
 		645=[
-			xx=431
+			xx=432
 			yy=5423
 			zz=876
 			asdf=45.0
 		]
 		34=[
-			xx=543543
-			yy=77453
-			zz=12435
-			asdf=543.0
+			xx=543
+			yy=77
+			zz=687
+			asdf=87.0
 		]
 		345=[
 			xx=6543
-			yy=87543
+			yy=87
 			zz=786
-			asdf=5432.0
+			asdf=645.0
 		]
-	]
-	test=[
-		5=fdsavsa
-		43=fadsfasd
-		54=gfsd
 	]
 }
