--- a/test/testConfig.cfg
+++ b/test/testConfig.cfg
@@ -3,41 +3,73 @@
 ##########################################################################################################
 
 General {
-	test=[
-		5=fdsa
-		43=fads
-		54=asdvnilas
-	]
 	blues=[
 		5=[
-			xx=532
-			yy=543
-			zz=52
-			asdf=235.0
+			xx=53276
+			yy=786
+			zz=546
+			asdf=235.07654
 		]
 		543=[
 			xx=543
-			yy=1234
-			zz=4123
+			yy=3457
+			zz=234
 			asdf=532462.0
 		]
 		645=[
 			xx=432
-			yy=5423
+			yy=5423765
 			zz=876
 			asdf=45.0
 		]
 		34=[
-			xx=543
-			yy=77
-			zz=687
-			asdf=87.0
+			xx=543876
+			yy=77765
+			zz=687546
+			asdf=87.06
 		]
 		345=[
-			xx=6543
-			yy=87
-			zz=786
-			asdf=645.0
+			xx=654334
+			yy=87546
+			zz=786654
+			asdf=645.086
+		]
+		913=[
+			xx=654
+			yy=13647
+			zz=-314
+			asdf=-0.543
+		]
+	]
+	test=asdfkl
+	PI=3.141592653589793
+	rawr=[
+		[
+			test=5
+			asdf=1
+			rawr=-1
+		]=[
+			true
+			false
+			false
+		]
+		[
+			abv=543
+			tre=654
+			hdf=-65
+		]=[
+			false
+			true
+			false
+		]
+		[
+			gfsd=6354
+			erwt=-765
+			sdh=3345
+		]=[
+			false
+			true
+			true
 		]
 	]
 }
